Fix input style bleeding over results list

--- a/public/styles/components/_search-suggestions.scss
+++ b/public/styles/components/_search-suggestions.scss
@@ -22,6 +22,8 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    max-height: 220px;
+    overflow-y: auto;
 }
 
 .search-suggestions > ul > li {
